--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-django
-gunicorn
-django-tagging
+django==2.0.8  
+django-markdownx==2.0.23 
+django-tagging==0.4.6  
+gunicorn==19.9.0 
+Pillow==5.2.0  
